--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,20 @@ name: WideAFK
 version: '1.0'
 main: com.exemple.wideAFK.WideAFK
 api-version: '1.21'
-prefix: REPORT-GUI
+prefix: WideAFK
 load: STARTUP
 authors: [ Mike4947 ]
-description: A report plugin with a simple GUI
+depend: [Vault]
+description: Simple AFK Plugin That Works World(s)-Wide
+
+commands:
+  wideafk:
+    description: Main command for WideAFK.
+    usage: /wideafk reload
+permissions:
+  wideafk.reload:
+    description: Allows reloading the config.
+    default: op
+  wideafk.earn:
+    description: Allows players to earn money while AFK.
+    default: true
